add subtitle to header

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,6 +3,9 @@
     <div class="container">
       <%= link_to "ask", root_path, id: "logo" %>
       <nav>
+        <ul class = "nav pull-left">
+          <li><a href="#">Be accountable for growing your business and changing the world.</a></li>
+        </ul>
         <ul class="nav pull-right">
           <li><%= link_to "Home",    root_path %></li>
           <li><%= link_to "Help",    help_path %></li>
