--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,7 +6,8 @@
         <%= gravatar_for @user %>
         <%= @user.name %>
       </h1>
-      <%= link_to("edit profile", edit_user_path) %>
+      <% if current_user?(@user) %>
+      <%= link_to("edit profile", edit_user_path) %><% end %>
     </section>
   </aside>
 </div>
