Add user following

--- a/app/views/shared/_ask_title.html.erb
+++ b/app/views/shared/_ask_title.html.erb
@@ -1,3 +1,3 @@
-  <h1 class="dow"><% unless day_off?(dft(0)) %>TODAY<% else %><%= dft(0+3) %><% end %></h1>
+  <h1 class="dow"><% unless day_off?(dft(1)) %>TOMORROW<% else %><%= dft(1+3) %><% end %></h1>
   <hr/>
-  <h2 class="subtitle">Help others</h2 class="subtitle">
+  <h2 class="subtitle">New ASK</h2 class="subtitle">
