--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -5,6 +5,9 @@
         <%= render 'shared/user_info' %>
       </section>
       <section>
+        <%= render 'shared/stats' %>
+      </section>
+      <section>
         <%= render 'shared/micropost_form' %>
       </section>
     </aside>
@@ -16,11 +19,12 @@
 <% else %>
 <div class="row">
 <div class="span3">
-  <%= render 'shared/contact_text' %>
+  <%= render 'shared/contact_title' %>
   <%= render 'shared/contact_text_long' %>
-  <%= render 'shared/contact_form' %>
+  <%# render 'shared/contact_form' %>
 </div>
 <div class="span3">
+  <%= render 'shared/ask_title' %>
   <%= render 'shared/ask_text' %>
   <%= render 'shared/ask_text_long' %>
 </div>
