--- a/app/views/asks/_ask1.html.erb
+++ b/app/views/asks/_ask1.html.erb
@@ -1,7 +1,7 @@
 <%= form_for(@ask) do |f| %>
   <%= render 'shared/error_messages', object: f.object %>
   <div class="field">
-    <%= f.text_field :description, placeholder: "lorem ipsum..." %>
+    <%= f.text_field :description, placeholder: "what do you need..." %>
   </div>
-  <%= f.submit "Add a need", class: "btn btn-success" %>
+  <%= f.submit "Add a need", class: "btn btn-primary btn-small" %>
 <% end %>
