--- a/app/views/shared/_contact_form.html.erb
+++ b/app/views/shared/_contact_form.html.erb
@@ -1,5 +1,7 @@
 <%= form_for(@contact) do |f| %>
   <%= render 'shared/error_messages', object: f.object %>
-  <%= f.text_field :name, placeholder: "contact name..." %>
-  <%= f.submit "Add name", class: "btn btn-primary" %>
+  <div class="field">
+    <%= f.text_field :name, placeholder: "contact name..." %>
+  </div>  
+  <%= f.submit "Add to contact list", class: "btn btn-primary btn-small" %>
 <% end %>
