--- a/app/views/shared/_follow_up_text.html.erb
+++ b/app/views/shared/_follow_up_text.html.erb
@@ -1,1 +1,3 @@
-    <p><em>Nothing happens easily or automatically. You must follow up.</br></br></em></p>
+   	<p><em>Nothing happens easily or automatically. You must follow up.</em></p>
+    </br>
+	</br>
