--- a/app/views/shared/_help_text.html.erb
+++ b/app/views/shared/_help_text.html.erb
@@ -1,1 +1,2 @@
-    <p><em>Pay it forward because what goes around comes around.</br></br></em></p>
+    <p><em>Pay it forward because what goes around comes around.</em></p>
+	</br></br>
