--- a/app/views/asks/_follow_up_ask_list.html.erb
+++ b/app/views/asks/_follow_up_ask_list.html.erb
@@ -3,9 +3,11 @@
     <% current_user.asks.where('followed_up = ?', false).where('done = ?', true).each do |a| %> 
 		  <%= form_for(a) do |f| %>
   			<%= render 'shared/error_messages', object: f.object %>
-  			<li>
-  				<%= a.description %>
-  				<%= f.hidden_field :followed_up, :value=>true %>
+  			<li class="up">
+  				<span class="adescription"><%= a.description %></span></br>
+          <span class="time-ago">Done <%= time_ago_in_words(a.date_done) unless a.date_done == nil %> ago.</span>
+  				<%= f.hidden_field :date_followed_up, value: Date.today %>
+          <%= f.hidden_field :followed_up, :value=>true %>
   				<%= f.submit "Follow up complete", class: "btn btn-small btn-link"%>
   			</li>
 		  <% end %>
