--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,11 @@
 <% provide(:title, 'Sign up') %>
 <h1>Sign up</h1>
-
+  <% if current_user %>
+    Signed in as <strong><%= current_user.name %></strong>!
+    <%= link_to "Sign out", signout_path, id: "sign_out" %>
+  <% else %>
+    <%= link_to "Sign in with Facebook", "/auth/facebook", id: "sign_in" %>
+  <% end %>
 <div class="row">
   <div class="span6 offset3">
     <%= form_for(@user) do |f| %>
