--- a/app/views/asks/_open_ask_list.html.erb
+++ b/app/views/asks/_open_ask_list.html.erb
@@ -2,8 +2,8 @@
     <% Ask.where("public = ?", true).where("user_id != ?", current_user.id).limit(10).each do |a| %> 
          <li class="rarrow"> 
           <span class="adescription"><%= a.description %></span> | 
-          <%= link_to "help", "mailto:#{a.user.email}" %></br>
-          <span class="time-ago"><%= gravatar_for(a.user, size: 20) %>From <%= link_to a.user.name, a.user %> <%= time_ago_in_words(a.created_at) %> ago.</span></br></br>
+          <%= link_to "help", "mailto:#{a.user.email}" %><br>
+          <span class="time-ago"><%= gravatar_for(a.user, size: 20) %>From <%= link_to a.user.name, a.user %> <%= time_ago_in_words(a.created_at) %> ago.</span><br><br>
         </li>
     <% end %>
 </ul>
