--- a/app/views/asks/_ask1.html.erb
+++ b/app/views/asks/_ask1.html.erb
@@ -3,5 +3,5 @@
 	  <div class="field">
 	    <%= f.text_field :description, placeholder: "what do you need..." %>
 	  </div>
-	  <%= f.submit "Add a need", class: "btn btn-primary btn-small" %>
+	  <%= f.submit class: "btn btn-primary btn-small" %>
 	<% end %>
