--- a/app/views/asks/_follow_up_ask_list.html.erb
+++ b/app/views/asks/_follow_up_ask_list.html.erb
@@ -1,14 +1,14 @@
 <% if current_user.asks.where("followed_up = ?", false).any? %>
-  <ul>
+  <ul id="fulist">
     <% current_user.asks.where('followed_up = ?', false).where('done = ?', true).each do |a| %> 
 		  <%= form_for(a) do |f| %>
   			<%= render 'shared/error_messages', object: f.object %>
   			<li class="up">
   				<span class="adescription"><%= a.description %></span><br>
-          <span class="time-ago">Done <%= time_ago_in_words(a.date_done) unless a.date_done == nil %> ago.</span>
+          <span class="time-ago">Done <%= time_ago_in_words(a.date_done) unless a.date_done == nil %> ago.</span><br>
   				<%= f.hidden_field :date_followed_up, value: Date.today %>
           <%= f.hidden_field :followed_up, :value=>true %>
-  				<%= f.submit "Follow up complete", class: "btn btn-small btn-link"%>
+  				<%= f.submit "Follow up done", class: "btn btn-small hidden fu_btn"%>
   			</li>
 		  <% end %>
     <% end %>
