--- a/app/views/shared/_contact_list.html.erb
+++ b/app/views/shared/_contact_list.html.erb
@@ -2,20 +2,28 @@
   <ul id="list">
     <% current_user.contacts.where('done = ?', false).order("due_at ASC").each do |c| %> 
       <li class="up" id="<%= c.id %>">
-            <span class="cname <%= "overdue" if overdue?(c) %>"><%= c.name %></span>
+            <span class="cname <%= "overdue" if overdue(c) %>"><%= c.name %></span>
             <br>
             <span class="time-ago"><%= "Added #{time_ago_in_words(c.created_at)} ago." %></span><br>
             <% unless c.due_at == nil %>
               <span class="time-ago due_<%= c.id %>">
                   <%= "Target done by #{c.due_at.strftime('%b %e')}." %> <a href="#" id="<%= c.id %>">update</a><br>
               </span>
-              <div id="edit_due_at_<%= c.id %>" class="hidden">
-                <%= form_for(c) do |f| %>
-                <%= f.text_field :due_at, value: "#{c.due_at.strftime('%b %e')}", class: "edit_due_date" %><%= f.submit "Update", class: "btn btn-small due_btn" %>
-              <% end %></div>
+                <div id="edit_due_at_<%= c.id %>" class="hidden">
+                  <%= form_for(c) do |f| %>
+                    <%= f.text_field :due_at, value: "#{c.due_at.strftime('%b %e')}", class: "edit_due_date" %>
+                    <%= f.submit "Update", class: "btn btn-small due_btn" %>
+                  <% end %>
+                </div>
             <% else %>
               <span class="time-ago">
-                  <%= link_to("add due date", '#') %><br>
+                <a href="#" id="<%= c.id %>">add due date</a>
+                <div id="edit_due_at_<%= c.id %>" class="hidden">
+                  <%= form_for(c) do |f| %>
+                    <%= f.text_field :due_at, class: "edit_due_date" %>
+                    <%= f.submit "Add date", class: "btn btn-small due_btn" %>
+                  <% end %>
+                </div>
               </span>
             <% end %>
           <%= form_for(c) do |f| %>  
