--- a/app/views/asks/_ask3.html.erb
+++ b/app/views/asks/_ask3.html.erb
@@ -1,11 +1,11 @@
-  	<p class="lead"><%= @ask.description %></p>
-    <% unless @ask.helper == ("" || nil) %><ul><li class="profile"><%= @ask.helper %></li></ul><% end %>
-    <% outcomes = [ "Advice", "Introduction", "Support", "Money", "Don't know" ] %>
-    <em>"Expected outcome of the ASK?</em>
-    <% outcomes.each do |o| %>
-            <%= form_for(@ask, remote: true) do |f| %>
-                <%= render 'shared/error_messages', object: f.object %>
-                <%= f.hidden_field :category, :value=> o %>
-                <%= f.submit o.to_s, class: "btn btn-success btn-category" %>
-            <% end %>
+<p class="lead"><%= @ask.description %></p>
+<% unless @ask.helper == ("" || nil) %><ul><li class="profile"><%= @ask.helper %></li></ul><% end %>
+<% outcomes = [ "Advice", "Introduction", "Support", "Money", "Don't know" ] %>
+<em>"Expected outcome of the ASK?</em>
+<% outcomes.each do |o| %>
+    <%= form_for(@ask, remote: true) do |f| %>
+        <%= render 'shared/error_messages', object: f.object %>
+        <%= f.hidden_field :category, :value=> o %>
+        <%= f.submit o.to_s, class: "btn btn-small btn-primary btn-category" %>
     <% end %>
+<% end %>
