--- a/app/views/help_others_mailer/i_can_help.text.erb
+++ b/app/views/help_others_mailer/i_can_help.text.erb
@@ -1,9 +1,12 @@
-HelpOthersMailer#i_can_help
+<%= @helper_name %> wants to help with your ASK: <%= @ask_description %>
 
-Hi @user,
+Message:
 
-@helper wants to help with your ask re: @ask.
+<%= @message %>
 
-They are cc'd on this email.
+To respond to <%= @helper_name %>, just reply-all to this email. They are copied.
 
-Your Guidepost.
+Learn more about <%= @helper_name %> and their OPEN ASKs: <%= @sender_url %>
+
+
+Stuck?? Learn how expert entrepreneurs think: http://www.inc.com/magazine/20110201/how-great-entrepreneurs-think.html
