--- a/app/views/asks/_ask4.html.erb
+++ b/app/views/asks/_ask4.html.erb
@@ -1,7 +1,20 @@
-<p class="lead"><%= @ask.description %></p>
+<div class="ask4">
 <ul>
-	<% unless @ask.helper == ("" || nil) %><li class="profile"><%= @ask.helper %></li><% end %>
-	<% unless @ask.category == ("" || nil) %><li class="check"><%= @ask.category %></li><% end %>
+	<li class="up"><p class="cname"><%= @ask.description %></p></li>
+	<li class="profile"><%= @ask.helper %></li>
+	<li class="check"><%= @ask.category %></li>
 </ul>
- <hr/>
- <%= link_to "Add another ASK", root_path %>
+<hr>
+<%= link_to("Add another ASK", root_path, id:"add-ask") %>
+</div>
+
+<script>
+	$("a#add-ask").click( function(e){
+		$("div#ask-list").html("<%= escape_javascript(render('asks/ask_list')) %>");
+		$("div#ask-list").toggleClass("hidden");
+		$("div#ask-form").html("<%= escape_javascript(render('asks/ask1')) %>"));
+		$("div.ask1").toggleClass("hidden");
+		$("div.ask4").toggleClass("hidden");
+		e.preventDefault();
+	});
+</script>
