--- a/app/views/asks/_open_ask_list.html.erb
+++ b/app/views/asks/_open_ask_list.html.erb
@@ -1,9 +1,9 @@
 <ul>
     <% Ask.where("public = ?", true).where("user_id != ?", current_user.id).limit(10).each do |a| %> 
          <li class="rarrow"> 
-          <span class="adescription"><%= a.description %></span> | 
-          <%= link_to "help", "mailto:#{a.user.email}" %><br>
+          <span class="adescription"><%= a.description %></span><br>
           <span class="time-ago"><%= gravatar_for(a.user, size: 20) %>From <%= link_to a.user.name, a.user %> <%= time_ago_in_words(a.created_at) %> ago.</span><br><br>
+          <span style="text-align: center"><%= link_to "help with this ASK", new_ask_message_path(a) %></span><br>
         </li>
     <% end %>
 </ul>
