--- a/app/views/shared/_ask_text.html.erb
+++ b/app/views/shared/_ask_text.html.erb
@@ -1,1 +1,1 @@
-  <p><em>Expert entrepreneurs ask others for commitments to help grow their business.</em></p>
+  <p><em>Ask others for commitments to help grow your business.</em></p><br><br>
