--- a/app/views/shared/_contact_title.html.erb
+++ b/app/views/shared/_contact_title.html.erb
@@ -1,4 +1,4 @@
-  <h1 class="dow"><% unless day_off?(dft(0)) %>TODAY<% else %><%= dft(0+3) %><% end %></h1>
+  <h1 class="dow"><% unless day_off?(dft(0)) %>TODAY<% else %><%= dft(days_to_monday) %><% end %></h1>
   <hr/>
   <h2 class="subtitle">Refresh contact</h2>
   <p><em>Think about your family, friends, and others you know.</em></p><br><br>
