--- a/app/views/shared/_help_title.html.erb
+++ b/app/views/shared/_help_title.html.erb
@@ -1,3 +1,3 @@
-    <h1 class="dow"><% unless day_off?(dft(2)) %><%= dft(2) %><% else %><%= dft(2+3) %><% end %></h1>
+    <h1 class="dow"><% unless day_off?(dft(2)) %><%= dft(2) %><% else %><%= dft(dft_day3) %><% end %></h1>
     <hr/>
     <h2 class="subtitle">Help others</h2>
