--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="span3">
+  <div class="span3 <%= "overdue" if (signed_in? && contact_overdue?(current_user.id)) %>">
     <%= render 'shared/contact_title' %>
     <%= render 'shared/contact_text_long' if (current_user == nil || current_user.contacts.count == 0) %>
     <% if signed_in? %>
@@ -9,26 +9,31 @@
       <p><%= link_to "Sign up now!", signup_path, class: "btn btn-large btn-primary" %></p>
     <% end %>
   </div>
-  <div class="span3">
+  <div class="span3 <%= "overdue" if (signed_in? && ask_overdue?(current_user.id)) %>">
     <%= render 'shared/ask_title' %>
     <%= render 'shared/ask_text' %>
     <%= render 'shared/ask_text_long' if (current_user == nil || current_user.asks.count == 0) %>
     <% if signed_in? %>
-    <div id="ask">
-      <%= render 'asks/ask_list' %> <hr/>
+    <div id="ask-list">
+      <%= render 'asks/ask_list' %> 
+    </div>
+    <hr>
+    <div id="ask-form">
       <%= render 'asks/ask1' %>
-      </div>
+    </div>
     <% end %>
+
   </div>
   <div class="span3">
     <%= render 'shared/help_title' %>
     <%= render 'shared/help_text' %>
     <%= render 'shared/help_text_long' if (current_user == nil || Ask.where("public = ?", true).where("user_id != ?", current_user.id).count == 0) %>
-    <% if signed_in? %>
+      <% if signed_in? %>
       <%= render 'asks/open_ask_list' %>
+      <%= render 'shared/progress' %>
     <% end %>
   </div>
-  <div class="span3">
+  <div class="span3 <%= "overdue" if (signed_in? && ask_fu_overdue?(current_user.id)) %>">
     <%= render 'shared/follow_up_title' %>
     <%= render 'shared/follow_up_text' %>
     <%= render 'shared/follow_up_text_long' if (current_user == nil || current_user.asks.where("followed_up = ?", true).count == 0) %>
