--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -5,8 +5,8 @@
   <nav>
     <ul>
       <li><%= link_to "Effectuation",   'http://effectuation.org', :target => "_blank" %></li>
-      <li><%= link_to "About",   about_path %></li>
-      <li><%= link_to "Contact", contact_us_path %></li>
+      <!--<li><%= link_to "About",   about_path %></li>
+      <li><%= link_to "Contact", contact_us_path %></li> -->
       <li>by <%= link_to "Whinot", "http://whinot.com/", :target => "_blank" %></li>
     </ul>
   </nav>
