--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,10 +1,10 @@
 <header class="navbar navbar-fixed-top">
   <div class="navbar-inner">
     <div class="container">
-      <%= link_to "ask", root_path, id: "logo" %>
+      <%= link_to "guidepost", root_path, id: "logo" %>
       <nav>
         <ul class = "nav pull-left">
-          <li><a href="#">Be accountable for growing your business and changing the world.</a></li>
+          <li><h5>Be accountable for growing your business and changing the world.</h5></li>
         </ul>
         <ul class="nav pull-right">
         <% if signed_in? %>
