--- a/app/views/shared/_ask_title.html.erb
+++ b/app/views/shared/_ask_title.html.erb
@@ -1,3 +1,3 @@
   <h1 class="dow"><% unless day_off?(dft(1)) %>TOMORROW<% else %><%= dft(days_to_monday+1) %><% end %></h1>
   <hr/>
-  <h2 class="subtitle">New ASK</h2>
+  <h2 class="subtitle">New Ask</h2>
