--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -16,7 +16,7 @@
 <div class="span3 offset1">
 	<h4>Other Asks from <%= @message.ask.user.name %></h4><hr>
 	<% @message.ask.user.asks.each do |a| %>
-	<%= link_to(a.description, ask_messages_path(a)) %>
+	<%= link_to(a.description, new_ask_message_path(a)) %>
 	<hr>
 	<% end %>
 </div>
