hiding fb authentication

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,9 +4,9 @@
     Signed in as <strong><%= current_user.name %></strong>!
     <%= link_to "Sign out", signout_path, id: "sign_out" %>
   <% else %>
-    <h1><%= link_to "Sign in with Facebook", "/auth/facebook", id: "sign_in" %></h1>
+    <h1 class="hidden"><%= link_to "Sign in with Facebook", "/auth/facebook", id: "sign_in" %></h1>
   <% end %>
-<div class="row hidden">
+<div class="row">
   <div class="span6 offset3">
     <%= form_for(@user) do |f| %>
       <%= render 'shared/error_messages', object: f.object %>
