--- a/app/views/asks/create.js.erb
+++ b/app/views/asks/create.js.erb
@@ -1,2 +1,2 @@
-$("div#ask-form").html("<%= escape_javascript(render('asks/ask4')) %>")
+$("div#ask-form").html("<%= escape_javascript(render('asks/ask4')) %>");
 $("div.ask3").toggleClass("hidden");
