--- a/app/views/weekly_reminder/ContactsAndAsks.text.erb
+++ b/app/views/weekly_reminder/ContactsAndAsks.text.erb
@@ -5,11 +5,14 @@ Just a reminder that you want to contact one of these people this week:
 	<%= c %>
 <% end %>
 
-You want to make ASKs about:
-<% @top3_asks.each do |a| %>
-	<%= a %>
+<% if @top3_asks.length > 0 %>
+	You want to make ASKs about:
+	<% @top3_asks.each do |a| %>
+		<%= a %>
+	<% end %>
+	See all of your planned contacts and Asks. <%= root_url %>.
+<% else %>
+	You haven't added any Asks yet. Add one now: <%= root_url %>
 <% end %>
-
-See all of your planned contacts and ASKs. <%= root_url %>
 
 Need inspiration? Did you know that Stacy's Pita Chips started out of a cart? http://www.effectuation.org/article/identity-chip-story-stacys-pita-chips
