--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -12,6 +12,9 @@
       <%= f.label :email %>
       <%= f.text_field :email %>
 
+      <%= f.label :phone_number, "Cell phone (for txt messages). Must include the country code." %>
+      <%= f.phone_field :phone_number %>
+
       <%= f.label :password %>
       <%= f.password_field :password %>
 
