--- a/app/views/weekly_reminder/ContactsAndAsks.html.erb
+++ b/app/views/weekly_reminder/ContactsAndAsks.html.erb
@@ -7,13 +7,15 @@
 <% end %>
 </ul>
 
-<h3>You want to make ASKs about:</h3>
-<ul>
-<% @top3_asks.each do |a| %>
-	<li><%= a %></li>
+<% if @top3_asks.length > 0 %>
+	<h3>You want to make ASKs about:</h3>
+	<ul>
+	<% @top3_asks.each do |a| %>
+		<li><%= a %></li>
+	<% end %>
+	</ul>
+	<p>See all of your <%= link_to "planned contacts and ASKs", root_url %>.</p>
+<% else %>
+	<h4>You haven't added any Asks yet. <%= link_to "Add one now.", root_url %></h4>
 <% end %>
-</ul>
-
-<p>See all of your <%= link_to "planned contacts and ASKs", root_url %>.</p>
-
 <p>Need inspiration? Did you know that <%= link_to "Stacy's Pita Chips started out of a cart", "http://www.effectuation.org/article/identity-chip-story-stacys-pita-chips" %>?</p>
